# flameshot-rs

./: Cargo.toml  README.md
examples/: save_full_screenshot.rs  save_gui_screenshot.rs  to_dynamic_image.rs
src/: errors.rs  flameshot.rs
src/params/: full.rs  fullscreens.rs  gui.rs  mod.rs  screen.rs
